--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,10 @@ services:
     image: appi
     # volumes, let's see if I can point it to local
     volumes:
-      - /app:/var/www/html/
+      # dev
+      - .:/var/www/html/
+      #production
+      #- /app:/var/www/html/
     # apache is running on port 80 but we want to expose this to port 4000 on our local machine
     ports:
       - "4000:80"
@@ -17,7 +20,7 @@ services:
       - appidb
   appidb:
     # we use the mysql base image, version 5.6.36
-    image: mysql:5.6.36
+    image: mysql:5.7.24
     # we mount a datavolume to make sure we don't loose data
     volumes:
       - db_data:/var/lib/mysql
